fix: notch rendering on mobile

--- a/styles/mixins/notch.scss
+++ b/styles/mixins/notch.scss
@@ -3,7 +3,7 @@
     content: '';
     position: absolute;
     z-index: 1;
-    bottom: -12px;
+    bottom: -11px;
     left: 0;
     width: 100%;
     height: 12px;
